fixed main align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,10 +98,9 @@ button {
 
 /* Main and trending topics */
 .mainTrend {
-  max-width: 1200px;
   display: flex;
   margin: 0 10%;
-  justify-content: space-between;
+  justify-content: center;
 }
 .trending {
   max-width: 1200px;
@@ -181,13 +180,16 @@ hr {
 }
 /* ARTICLE LEFT*/
 .article {
-  max-width: 1200px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   margin: 0 10%;
 }
+.article > div{
+    max-width: 1200px;
+    display: flex;
+    justify-content: space-between;
+}
 article {
-  max-width: 680px;
   margin-right: 5%;
 }
 .mainArticle {
@@ -236,9 +238,6 @@ article {
   max-width: 200px;
 }
 /*SECTIONS*/
-section {
-  width: 360px;
-}
 .sectionTitle {
   font-weight: bold;
   font-size: 18px;
@@ -279,6 +278,13 @@ section hr {
     left: 520px;
   }
 }
+@media screen and (max-width: 940px) {
+    .article > div {
+      display: flex;
+      flex-direction: column-reverse;
+    }
+}
+
 @media screen and (max-width: 900px) {
   .mainTitleSVG {
     left: 420px;
@@ -288,10 +294,6 @@ section hr {
   }
   .mainTitle h2 {
     font-size: 74px;
-  }
-  .article {
-    display: flex;
-    flex-direction: column-reverse;
   }
   article {
     margin-right: 0px;
@@ -341,7 +343,7 @@ section hr {
     font-size: 14px;
   }
   .sideArticle img {
-    max-width: 160px;
+    max-width: 140px;
   }
 }
 @media screen and (max-width: 550px) {
@@ -367,9 +369,11 @@ section hr {
         display: flex;
         align-items: center;
       }
-      .sideArticle img {
-        max-width: 100px;
-      }
+}
+@media screen and (max-width: 350px) {
+    .sideArticle img {
+      width: 100px;
+    }
 }
 @media screen and (max-width: 305px) {
       .sideArticle img {
